--- a/StudentMVCApplication/Views/Home/Index.cshtml
+++ b/StudentMVCApplication/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<StudentMVCApplication.Models.Student>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Index Page";
 }
 
 <h2>Index</h2>
